[package]
name = "krpc-mars-terraformer"
version = "0.8.0"
authors = ["cahu"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
heck = "0.4"
tera = "1"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
